...

const val ANIMATION_VISIBILITY_DURATION = 1000
const val ANIMATION_PLACEMENT_DURATION = 500
const val TYPING_DELAY_COMPLETION = 200L
const val TAG_LOADING_USERS = "loadingUsers"
const val TAG_LOAD_MORE_USERS = "loadMoreUsers"
const val TAG_USER_LIST = "userList"
const val TAG_USER_LIST_ITEM = "userListItem"
const val TAG_MORE_USERS_BUTTON = "moreUsers"
const val TAG_USER_DELETE_BUTTON = "userDelete"
const val TAG_USER_SEARCH = "userSearch"
const val TAG_CLEAR_SEARCH = "clearSearch"

