...
        userInfoComposable()
    }
}

const val TAG_USER_DETAIL = "userInfoDetail"
const val TAG_USER_DETAIL_CIRCULAR_PROGRESS_INDICATOR = "userDetailCircularProgressIndicator"
const val TAG_USER_DETAIL_BACK = "userDetailBack"

